# hydrant

./: README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: README.md  ci-backend.yml
deploy/web_scripts/: notify_build.py
scrapers/: README.md  catalog.py  cim.py  fireroad.py  math_dept.py  package.py  utils.py
scrapers/departments/: math_dept.py
scrapers/overrides.toml.d/sem/: 21L.toml  21M.toml
